--- a/task-2/index.html
+++ b/task-2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="assets/4517753-37.jpg" alt="Sample Image">
+        <img src="assets/4517753-37.jpg" alt="Vagabond">
         <div class="card-content">
             <h2>Vagabond</h2>
             <p>This manga series portrays a fictionalized account of the life of Japanese swordsman Musashi Miyamoto.</p>
