--- a/task-6/index.html
+++ b/task-6/index.html
@@ -8,21 +8,17 @@
 </head>
 <body>
     <div class="tabbed-interface">
-        
-        <div class="tab-bar">
-        <!-- Tab 1 -->
+        <!-- Tab Inputs and Labels -->
         <input type="radio" id="tab1" name="tab-group" class="tab-input" checked>
         <label for="tab1" class="tab-label">Tab 1</label>
 
-        <!-- Tab 2 -->
         <input type="radio" id="tab2" name="tab-group" class="tab-input">
         <label for="tab2" class="tab-label">Tab 2</label>
 
-        <!-- Tab 3 -->
         <input type="radio" id="tab3" name="tab-group" class="tab-input">
         <label for="tab3" class="tab-label">Tab 3</label>
-        </div>
 
+        <!-- Tab Contents -->
         <div id="section1" class="tab-content">
             <h2>Content for Tab 1</h2>
             <p>This is the content for the first tab. It includes some sample text to demonstrate the tabbed interface.</p>
@@ -37,7 +33,6 @@
             <h2>Content for Tab 3</h2>
             <p>This is the third tab. The content fades in and slides up when selected.</p>
         </div>
-
     </div>
 </body>
 </html>
